syntax = "proto3";

package scylla;

import "google/protobuf/empty.proto";

option go_package = "proto/scyllapb";

service ScyllaService {
  rpc UploadMessages (UploadMessagesRequest) returns (BaseResultResponse);

  rpc Ping (google.protobuf.Empty) returns (BaseResultResponse);
}

//Requests
message ChatMessage {
  string chat_id = 1;
  int64 user_id = 2;
  string message = 4;
}

message UploadMessagesRequest {
  repeated ChatMessage messages = 1;
}

//Responses
message BaseResultResponse {
  string result = 1;
}